--- a/src/main/resources/Language/en_US.yml
+++ b/src/main/resources/Language/en_US.yml
@@ -24,14 +24,15 @@ disableFirst: "Please disable the arena first with /spleef disable %arenaName%"
 arenaRemoved: "Arena removed"
 editCMDusage: "Please do /spleef edit <arena name>"
 #\n is a new line
-helpMessage: "§2----Spleef-----
-              /spleef list : List all arenas
-              /spleef enable/disable : Disable or enable an arena
-              /spleef join : join an arena
-              /spleef create : create an arena
-              /spleef bowspleef : Do bow spleef on or off for a arena
-              /spleef remove : remove an arena
-              /spleef edit : edit an arena"
+helpMessage: |-
+  §2----Spleef-----
+  /spleef list : List all arenas
+  /spleef enable/disable : Disable or enable an arena
+  /spleef join : join an arena
+  /spleef create : create an arena
+  /spleef bowspleef : Do bow spleef on or off for a arena
+  /spleef remove : remove an arena
+  /spleef edit : edit an arena"
 minPlayersMoreThan2: "§cMinumum players needs to be more than 2!"
 maxPlayersMoreThan2: "§Maximum players needs to be more than 2!"
 somethingWentWrong: "§4Something went wrong..."
