--- a/src/main/resources/Language/en_US.yml
+++ b/src/main/resources/Language/en_US.yml
@@ -45,3 +45,7 @@ someoneWon: "§6Someone won a game!"
 playerWon: "%playerName% won the game!"
 countDownCanceld: "§4The countdown has been canceled"
 secondsTillStart: "§6Seconds till start : %time%"
+wizardFormTitle: "Set min and max players"
+joinFormTitle: "Join arena"
+enableFormTitle: "enable arenas"
+disableFormTitle: "disable arenas"
