Added leave command

--- a/src/main/resources/Language/en_US.yml
+++ b/src/main/resources/Language/en_US.yml
@@ -49,3 +49,5 @@ wizardFormTitle: "Set min and max players"
 joinFormTitle: "Join arena"
 enableFormTitle: "enable arenas"
 disableFormTitle: "disable arenas"
+notInGame: "You aren't in a game"
+leaveCMDusage: "Please do /spleef leave"
